add shooting + score

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ body {
     background-size: contain;
 }
 
-.target.--rip {
+.target.--fly-down {
     background: url('../images/duck-done.png') no-repeat center;
     background-size: contain;
 }
